Fixes about telescope and update and reset password.
