# app/Http/Controllers/Api/Auth/UpdatePasswordController.php
@@ -7,7 +7,7 @@ namespace App\Http\Controllers\Api\Auth;
 use App\Exceptions\Application\PasswordMissmatchException;
 use App\Exceptions\ApplicationException;
 use App\Http\Controllers\Controller;
-use App\Http\Requests\ResetPasswordRequest;
+use App\Http\Requests\UpdatePasswordRequest;
 use App\Models\CustomerUser;
 use Illuminate\Auth\Events\PasswordReset;
 use Illuminate\Http\JsonResponse;
@@ -17,12 +17,12 @@ use Symfony\Component\HttpFoundation\Response;
 
 class UpdatePasswordController extends Controller
 {
-    public function __invoke(ResetPasswordRequest $request): JsonResponse
+    public function __invoke(UpdatePasswordRequest $request): JsonResponse
     {
         try {
             $loggedUser = $request->user();
 
-            if (!Hash::check($request->actual_password, $loggedUser->password)) {
+            if (!Hash::check($request->current_password, $loggedUser->password)) {
                 throw new PasswordMissmatchException();
             }
 
