# app/Http/Requests/UpdatePasswordRequest.php
@@ -6,7 +6,7 @@ namespace App\Http\Requests;
 
 use Illuminate\Foundation\Http\FormRequest;
 
-class ResetPasswordRequest extends FormRequest
+class UpdatePasswordRequest extends FormRequest
 {
     /**
      * Determine if the user is authorized to make this request.
@@ -19,8 +19,17 @@ class ResetPasswordRequest extends FormRequest
     public function rules(): array
     {
         return [
-            'actual_password' => 'required',
+            'current_password' => 'required',
             'password' => ['required','confirmed'],
         ];
+    }
+
+    protected function prepareForValidation(): void
+    {
+        $this->merge([
+            'current_password' => $this->currentPassword,
+            'password' => $this->newPassword,
+            'password_confirmation' => $this->confirmPassword,
+        ]);
     }
 }
